fix weird blank gap

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -60,11 +60,10 @@ body {
 	}
 
 	&__scenes {
-		@include size(180vh, 100vh);
+		@include size(100vw, 100vh);
 		overflow: hidden;
-
 		&__wrapper {
-			@include size(100+ (180vh * 7), 100%);
+			@include size(calc(100vw + (180vh * 7)), 100%);
 			display: flex;
 		}
 
